# pa-pa-ya

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md
assets/shaders/: basic.frag  basic.vert  unlit_color.frag  unlit_color.vert
src/: main.cpp  sokol_impl.cpp
src/core/: Game.cpp  Game.hpp  Log.hpp  Types.hpp
src/gameplay/: Player.cpp  Player.hpp
src/graphics/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp
src/world/: World.cpp  World.hpp
